[package]
name = "actix-web-servio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.2.2"
actix-service = "2.0.2"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
bytes = "1.2.1"
futures-core = "0.3.25"
futures-util = "0.3.25"
http = "0.2.8"
servio = { path = "../servio" }
servio-http = { path = "../servio-http" }

[dev-dependencies]
servio-helloworld = { path = "../servio-helloworld" }
