[package]
name = "hyper-servio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
futures-core = "0.3.25"
futures-util = "0.3.25"
hyper = { version = "1.0.0-rc.1" }
servio = { path = "../servio" }
servio-http = { path = "../servio-http" }

[dev-dependencies]
hyper = { version = "1.0.0-rc.1", features = ["full"] }
tokio = { version = "1.21.2", features = ["rt", "net", "macros", "rt-multi-thread"] }
servio-helloworld = { path = "../servio-helloworld" }
servio-util = { path = "../servio-util" }
tracing-subscriber = "0.3.16"
