[package]
name = "servio-helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.25"
futures-util = "0.3.25"
servio = { path = "../servio" }
servio-http = { path = "../servio-http" }
