[package]
name = "servio-hyper"
version = "0.1.0"
description = "Hyper support for Servio"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
servio-http = { version = "0.1", path = "../servio-http" }
servio-service = { version = "0.1", path = "../servio-service" }

bytes = "1.4.0"
futures-core = "0.3.25"
futures-util = "0.3.25"
http = "0.2.8"
hyper = { version = "1.0.0-rc.1", features = ["server", "http1"] }

# WebSocket
flume = { version = "0.10.14", optional = true }
tokio = { version = "1.21.2", features = ["rt"], optional = true }
tokio-tungstenite = { version = "0.18.0", optional = true }

[dev-dependencies]
servio-util = { version = "0.1", path = "../servio-util" }

hyper = { version = "1.0.0-rc.1", features = ["full"] }
tokio = { version = "1.21.2", features = ["rt", "net", "macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.16"

[features]
default = []
websocket = ["dep:flume", "dep:tokio", "dep:tokio-tungstenite"]
