[package]
name = "servio-tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.25"
servio-service = { path = "../servio-service" }
tower = "0.4.13"
http = "0.2.8"
http-body = "1.0.0-rc1"
servio-http = { path = "../servio-http" }
tower-http = "0.3.4"
