[package]
name = "servio-tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.25"
servio-service = { path = "../servio-service" }
tower = { version = "0.4.13", features = ["util"] }
http = "0.2.8"
http-body = "1.0.0-rc1"
servio-http = { path = "../servio-http" }
tower-http = { version = "0.3.4", features = ["full"] }
bytes = "1.2.1"
tower-service = "0.3.2"
tower-layer = "0.3.2"
