[package]
name = "servio-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
servio-service = { path = "../servio-service" }
futures-core = "0.3.25"
tracing = "0.1"
futures-util = "0.3.25"
servio-http = { path = "../servio-http" }
http = "0.2.8"
bytes = "1.2.1"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0.87", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
