[package]
name = "servio-util"
version = "0.1.0"
description = "Various utilities for Servio"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
servio-http = { version = "0.1", path = "../servio-http" }
servio-service = { version = "0.1", path = "../servio-service" }

bytes = "1.2.1"
futures-core = "0.3.25"
futures-util = "0.3.25"
http = "0.2.8"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0.87", optional = true }
tracing = "0.1"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
